--- a/src/components/MenuBar/MenuBar.scss
+++ b/src/components/MenuBar/MenuBar.scss
@@ -1,3 +1,34 @@
+.menu--main {
+  display: flex;
+  justify-content: space-around;
+  padding: 1em 0;
+}
+
 .menu__font-dropdown {
-  margin-right: 50px;
+  margin-right: 1em;
+}
+
+.menu__divider {
+  height: 32px;
+  border: 1px solid #e9e9e9;
+  margin-right: 1em;
+}
+
+.menu__dark-mode-toggle-container {
+  display: flex;
+  align-items: center;
+  margin-right: -1em;
+  gap: 10px;
+}
+
+.dark-mode-toggle-container__toggle {
+  &.ui.toggle.checkbox input:checked ~ .box:before,
+  &.ui.toggle.checkbox input:checked ~ label:before {
+    background-color: #a445ed !important;
+  }
+
+  &.ui.toggle.checkbox input:focus:checked ~ .box:before,
+  &.ui.toggle.checkbox input:focus:checked ~ label:before {
+    background-color: #a445ed !important;
+  }
 }
