--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ body .mono {
   font-family: "Inconsolata" !important;
 }
 
+body .dark-mode {
+  background-color: black !important;
+  color: white;
+}
+
 @media screen and (min-width: 992px) {
   .container--main {
     width: 60% !important;
