--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,16 @@ body .mono {
 }
 
 body .dark-mode {
-  background-color: black !important;
-  color: white;
+  background-color: #050505 !important;
+  color: white !important;
+
+  a {
+    color: white !important;
+  }
+}
+
+.container--main {
+  min-height: 100vh;
 }
 
 @media screen and (min-width: 992px) {
