--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   src: url("./assets/fonts/inconsolata/Inconsolata-VariableFont_wdth\,wght.ttf");
 }
 
+html,
+body {
+  height: 100vh;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
