Change font size of word for smaller screens

--- a/src/components/Word/Word.scss
+++ b/src/components/Word/Word.scss
@@ -29,6 +29,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .word__keyword {
+    font-size: 2.5em !important;
+  }
+
   .word__source {
     span:first-child {
       text-decoration: underline;
