--- a/src/components/MenuBar/MenuBar.scss
+++ b/src/components/MenuBar/MenuBar.scss
@@ -33,3 +33,11 @@
     background-color: #a445ed !important;
   }
 }
+
+.moon-icon {
+  color: #838383;
+}
+
+.moon-icon--dark {
+  color: #a445ed;
+}
