--- a/src/components/MenuBar/MenuBar.scss
+++ b/src/components/MenuBar/MenuBar.scss
@@ -9,6 +9,17 @@
   font-weight: 600;
 }
 
+.menu__dropdown--dark-mode {
+  &.ui.dropdown .menu {
+    background-color: #1f1f1f;
+    box-shadow: 1px 7px 8px 0px rgba(164, 69, 237, 0.75);
+  }
+
+  &.ui.dropdown .menu > .item > .text {
+    color: white;
+  }
+}
+
 .menu__divider {
   height: 32px;
   border: 1px solid #e9e9e9;
